# ChangeLog for dev-ruby/protected_attributes
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.14 2015/07/14 04:45:24 graaff Exp $

  14 Jul 2015; Hans de Graaff <graaff@gentoo.org>
  -protected_attributes-1.0.8.ebuild, -protected_attributes-1.1.0.ebuild:
  Cleanup.

*protected_attributes-1.1.1 (14 Jul 2015)

  14 Jul 2015; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.1.1.ebuild:
  Version bump.

*protected_attributes-1.1.0 (23 Jun 2015)

  23 Jun 2015; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.1.0.ebuild:
  Version bump.

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  19 Apr 2015; Hans de Graaff <graaff@gentoo.org>
  protected_attributes-1.0.9.ebuild:
  Add missing test dependency on dev-ruby/rails.

*protected_attributes-1.0.9 (18 Mar 2015)

  18 Mar 2015; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.9.ebuild:
  Version bump.

  18 Mar 2015; Hans de Graaff <graaff@gentoo.org>
  -protected_attributes-1.0.7.ebuild:
  Cleanup.

  11 Mar 2015; Agostino Sarubbo <ago@gentoo.org>
  protected_attributes-1.0.7.ebuild, protected_attributes-1.0.8.ebuild:
  Add ~x86, wrt bug #508836

*protected_attributes-1.0.8 (17 Jun 2014)

  17 Jun 2014; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.8.ebuild:
  Version bump. Support forthcoming versions of Rails.

  02 May 2014; Hans de Graaff <graaff@gentoo.org>
  protected_attributes-1.0.7.ebuild:
  Add ruby20, ruby21.

  27 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  -protected_attributes-1.0.3.ebuild, -protected_attributes-1.0.5.ebuild:
  Cleanup.

*protected_attributes-1.0.7 (27 Mar 2014)

  27 Mar 2014; Hans de Graaff <graaff@gentoo.org>
  +protected_attributes-1.0.7.ebuild:
  Version bump.

*protected_attributes-1.0.5 (13 Feb 2014)

  13 Feb 2014; Hans de Graaff <graaff@gentoo.org>