@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/protected_attributes
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.14 2015/07/14 04:45:24 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.15 2015/07/15 05:58:51 graaff Exp $
+
+*protected_attributes-1.1.3 (15 Jul 2015)
+
+  15 Jul 2015; Hans de Graaff <graaff@gentoo.org>
+  +protected_attributes-1.1.3.ebuild:
+  Version bump.
 
   14 Jul 2015; Hans de Graaff <graaff@gentoo.org>
   -protected_attributes-1.0.8.ebuild, -protected_attributes-1.1.0.ebuild:
